Fix ruff exclude patterns to include all directories from pyproject.toml
- Updated CI/CD workflow: added evalap/api/alembic/versions/ and notebooks/ to exclude list
- Updated justfile: added alembic and notebooks exclusions to format and lint commands  
- Updated pre-commit hooks: added complete exclusion list matching pyproject.toml
- Ensures consistency across all ruff usage (manual, pre-commit, CI/CD)
- Fixes issue where command-line exclusions were overriding pyproject.toml settings

--- a/.github/workflows/pr_checks.yml
+++ b/.github/workflows/pr_checks.yml
@@ -59,10 +59,10 @@ jobs:
       #  run: uv run pre-commit run --all-files
 
       - name: Lint with ruff
-        run: uv run ruff check --output-format=github --config=pyproject.toml --select=F,Q,I --exclude=.cursor/,.specify/,.windsurf/
+        run: uv run ruff check --output-format=github --config=pyproject.toml --select=F,Q,I --exclude=evalap/api/alembic/versions/,notebooks/,.cursor/,.specify/,.windsurf/
 
       - name: Check formatting
-        run: uv run ruff format --check --diff --config=pyproject.toml --exclude=.cursor/,.specify/,.windsurf/
+        run: uv run ruff format --check --diff --config=pyproject.toml --exclude=evalap/api/alembic/versions/,notebooks/,.cursor/,.specify/,.windsurf/
 
       - name: Setup test database
         env:
