--- a/.github/workflows/pr_checks.yml
+++ b/.github/workflows/pr_checks.yml
@@ -55,14 +55,10 @@ jobs:
       - name: Install dependencies
         run: uv sync --locked --all-extras --dev --no-editable
 
-      #- name: Run pre-commit hooks
-      #  run: uv run pre-commit run --all-files
-
-      - name: Lint with ruff
-        run: uv run ruff check --output-format=github --config=pyproject.toml --select=F,Q,I
-
-      - name: Check formatting
-        run: uv run ruff format --check --diff --config=pyproject.toml
+      - name: Run pre-commit hooks
+        env:
+          RUFF_OUTPUT_FORMAT: github
+        run: uv run pre-commit run --all-files
 
       - name: Setup test database
         env:
