--- a/.github/workflows/pr_checks.yml
+++ b/.github/workflows/pr_checks.yml
@@ -55,10 +55,13 @@ jobs:
       - name: Install dependencies
         run: uv sync --locked --all-extras --dev --no-editable
 
-      - name: Run pre-commit hooks
+      - name: Lint with ruff
         env:
           RUFF_OUTPUT_FORMAT: github
-        run: uv run pre-commit run --all-files
+        run: uv run ruff check --config=pyproject.toml --select=F,Q,I
+
+      - name: Check formatting
+        run: uv run ruff format --check --diff --config=pyproject.toml
 
       - name: Setup test database
         env:
