Add .claude directory to exclusions and update constitution
- Add .claude/ to ruff exclude list in pyproject.toml
- Add .claude/ to pre-commit hook exclusions (end-of-file-fixer, trailing-whitespace)
- Update constitution sync report to v2.2.0 reflecting spec-kit IDE integration
- Completes IDE integration for Cursor, Windsurf, and Claude

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -39,7 +39,7 @@ repos:
       - id: check-yaml
       # Make sure that text files end in a newline
       - id: end-of-file-fixer
-        exclude: '^(\.cursor/|\.specify/|\.windsurf/)'
+        exclude: '^(\.claude/|\.cursor/|\.specify/|\.windsurf/)'
       # Remove trailing whitespace
       - id: trailing-whitespace
-        exclude: '^(\.cursor/|\.specify/|\.windsurf/)'
+        exclude: '^(\.claude/|\.cursor/|\.specify/|\.windsurf/)'
