Phase 1 complete: Infrastructure setup and basic structure
Completed tasks:
- T001: Created complete infra/ directory structure with staging, production, modules, scripts, docs, and tests
- T002: Initialized OpenTofu configuration files (main.tf, variables.tf, providers.tf)
- T00o: Added HCL validation and formatting hooks to .pre-commit-config.yaml with terraform_fmt and terraform_validate
- T004: Set up Scaleway provider configuration with authentication and multi-region support
- T005: Created comprehensive documentation structure (deployment.md, troubleshooting.md, architecture.md)

Additional setup:
- Created .terraformignore for security and best practices
- Configured OpenTofu backend for Scaleway Object Storage with state locking
- Set up provider configuration for fr-par, nl-ams, and pl-waw regions
- Added environment variable validation and sensitive data handling
- Fixed pre-commit hooks to work with OpenTofu
- Added Terraform/OpenTofu files to .gitignore
- Marked project_id output as sensitive

Ready for Phase 2: Foundational infrastructure setup

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,16 @@ config/products/\[BACKUP\]*
 *.csv
 .deepeval
 
+#
+# Terraform/OpenTofu
+#
+
+.terraform/
+*.tfstate
+*.tfstate.*
+.terraform.lock.hcl
+*.tfvars
+*.tfvars.json
 
 #
 # Default
