Fix GitHub Actions workflow lint errors
Fixed YAML schema issues:
- Changed destroy input default from string 'false' to boolean false
- Updated all conditional checks to use boolean comparison instead of string
- Applied to both staging and production workflows

Workflows now properly validate against GitHub Actions YAML schema.

--- a/.github/workflows/infrastructure-production.yml
+++ b/.github/workflows/infrastructure-production.yml
@@ -6,7 +6,7 @@ on:
       destroy:
         description: 'Destroy existing infrastructure'
         required: false
-        default: 'false'
+        default: false
         type: boolean
       confirm:
         description: 'Type "PRODUCTION" to confirm deployment'
@@ -77,15 +77,15 @@ jobs:
       run: tofu plan -out=tfplan -input=false
 
     - name: Apply deployment
-      if: github.event.inputs.destroy != 'true'
+      if: github.event.inputs.destroy != true
       run: tofu apply -input=false tfplan
 
     - name: Destroy infrastructure
-      if: github.event.inputs.destroy == 'true'
+      if: github.event.inputs.destroy == true
       run: tofu destroy -auto-approve
 
     - name: Extract outputs
-      if: github.event.inputs.destroy != 'true'
+      if: github.event.inputs.destroy != true
       id: outputs
       run: |
         tofu output -json > outputs.json
@@ -94,7 +94,7 @@ jobs:
         echo "EOF" >> $GITHUB_OUTPUT
 
     - name: Display outputs
-      if: github.event.inputs.destroy != 'true'
+      if: github.event.inputs.destroy != true
       run: |
         echo "## 🚀 Production Deployment Complete" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
