Fix pre-commit hook to run terraform validate from correct directory
- Updated terraform_validate hook to use --chdir=infra/staging
- This ensures validation runs where OpenTofu is initialized
- Fixes the 'provider not available' error from pre-commit hook

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -51,3 +51,6 @@ repos:
       - id: terraform_fmt
       # Terraform/OpenTofu validation
       - id: terraform_validate
+        args: [
+          --chdir=infra/staging
+        ]
