--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,7 +84,7 @@ distribution = false
 
 [tool.ruff]
 line-length = 111
-exclude = ["evalap/api/alembic/versions/", "notebooks/", ".claude/", ".cursor/", ".specify/", ".windsurf/"]
+exclude = ["evalap/api/alembic/versions/", "notebooks/", ".claude/", ".cursor/", ".specify/", ".windsurf/", ".kilocode/", "specs/"]
 
 [tool.ruff.lint]
 select = [
