--- a/.env.example
+++ b/.env.example
@@ -77,3 +77,18 @@ MCP_BRIDGE_URL=http://172.18.0.1:9092
 # =============================================================================
 # Log level: DEBUG, INFO, WARNING, ERROR, CRITICAL
 LOG_LEVEL=INFO
+
+# =============================================================================
+# Scaleway Infrastructure Configuration
+# =============================================================================
+# Scaleway Project ID (get from Scaleway console)
+SCALEWAY_PROJECT_ID=your-scaleway-project-id-here
+
+# Scaleway Access Key (get from Scaleway console)
+SCALEWAY_ACCESS_KEY=your-scaleway-access-key-here
+
+# Scaleway Secret Key (get from Scaleway console)
+SCALEWAY_SECRET_KEY=your-scaleway-secret-key-here
+
+# Scaleway Region (default: fr-par)
+SCALEWAY_REGION=fr-par
