--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,10 @@ test = [
     "pytest==8.3.3",
     "pytest-asyncio==0.24.0",
 ]
+infra = [
+    "pulumi>=3.206.0,<4.0.0",
+    "pulumi-scaleway>=0.3.0,<1.0.0",
+]
 
 [tool.pytest.ini_options]
 asyncio_default_fixture_loop_scope = "function"
