feat: Successfully deploy Pulumi infrastructure to Scaleway
- Migrate from deprecated pulumi-scaleway (v0.3.0) to pulumiverse-scaleway (v1.37.0)
- Update all APIs to non-deprecated versions:
  - DatabaseInstance → databases.Instance
  - ContainerNamespace → containers.Namespace
  - Container → containers.Container
  - ObjectBucket → object.Bucket
- Fix max_concurrency limit (80 max, not 100)
- Remove deprecated endpoint_ip/endpoint_port references
- Remove deprecated ACL parameter from buckets
- Use docker.io/strm/helloworld-http:latest for proper HTTP server
- Add PULUMI_CONFIG_PASSPHRASE to .env.example with uv --env-file usage
- Add flexible 'just pulumi' command for infrastructure management
- Update pyproject.toml with correct Pulumi dependencies
- Successfully deploy 7 resources:
  - PostgreSQL-15 Database Instance
  - Serverless Container Namespace
  - Serverless Container with HTTP server
  - Object Storage Bucket with versioning
  - Database User and Database
  - Pulumi Stack

Total deployment time: 5m27s (initial), 1s (subsequent runs)

--- a/.env.example
+++ b/.env.example
@@ -82,13 +82,23 @@ LOG_LEVEL=INFO
 # Scaleway Infrastructure Configuration
 # =============================================================================
 # Scaleway Project ID (get from Scaleway console)
-SCALEWAY_PROJECT_ID=your-scaleway-project-id-here
+SCW_PROJECT_ID=your-scaleway-project-id-here
 
 # Scaleway Access Key (get from Scaleway console)
-SCALEWAY_ACCESS_KEY=your-scaleway-access-key-here
+SCW_ACCESS_KEY=your-scaleway-access-key-here
 
 # Scaleway Secret Key (get from Scaleway console)
-SCALEWAY_SECRET_KEY=your-scaleway-secret-key-here
+SCW_SECRET_KEY=your-scaleway-secret-key-here
 
 # Scaleway Region (default: fr-par)
-SCALEWAY_REGION=fr-par
+SCW_REGION=fr-par
+
+# =============================================================================
+# Pulumi Infrastructure Configuration
+# =============================================================================
+# Pulumi passphrase for encrypting stack secrets
+# Use with: uv run --env-file ../.env pulumi up --stack organization/evalap/dev --yes
+PULUMI_CONFIG_PASSPHRASE=your-pulumi-passphrase-here
+
+# Database password for Scaleway managed PostgreSQL
+DB_PASSWORD=your-secure-database-password-here
