feat: Make container port configurable and fix bucket project assignment
- Add configurable 'port' field to ContainerConfig (defaults to 8080)
- Update ServerlessContainer to use config.port instead of hardcoded value
- Switch container image to testcontainers/helloworld (listens on port 8080)
- Add project_id to bucket creation to ensure correct project assignment
- Add force_destroy=True to bucket for easier cleanup during development
- Fix bucket creation 403 error by explicitly specifying project_id

All 7 resources now deploy successfully:
- PostgreSQL-15 Database Instance
- Serverless Container Namespace
- Serverless Container with testcontainers/helloworld image
- Object Storage Bucket with versioning
- Database User and Database
- Pulumi Stack

Deployment time: ~8 seconds for updates

--- a/infra/Pulumi.dev.yaml
+++ b/infra/Pulumi.dev.yaml
@@ -1,9 +1,9 @@
-encryptionsalt: v1:oaKNBO/4qxk=:v1:3oUs1G5h6Cvz1m+F:staeVj6s7KAnf7eSOKhv2/u6Q1hweQ==
+encryptionsalt: v1:Vcc8bLM7Ehg=:v1:aK97nilDDN18kP2x:kuqYkO1bLYrdZA1XMQ/DcVk9dtroaA==
 config:
   evalap:project_id: 863286b3-ec9c-4990-949e-153706b069a8
   evalap:access_key:
-    secure: v1:NDWccVE4ZZTU+IFq:3HXmjBeMKjfa7ligbtXVNE4cXCfVLF3piA9+Kptw/QkObjZr
+    secure: v1:uqur5rTxPupah3Qf:CAYnfsF/LjOWaYFAEABGMibP9XqZ4DmZz1/DOZE5/FjfR83w
   evalap:secret_key:
-    secure: v1:oS4A1fob6Dn3X7M/:Vh5S5+WiHeCUBEXz+A/7TiOOexurwYYYxk2smMzh2GM0szCzWpc9dQb2UkLfyGj3KjS3jg==
+    secure: v1:YDFJAiswVYSQQn6g:fk955gdY91MkR3WQLhYo5gNd1zOLtjqQ6S2KIqfMi32ldBBl+cftglYKVwvJxBwaeJdSKQ==
   evalap:db_password:
-    secure: v1:FolAhIxjHQ4gFKsw:fiMxi+yLDqmrqirVDdwNdwroat/wwbiJsLWnpdt/CavqOmVP2VUrg72V
+    secure: v1:ysv/YMxLkT0KrqCP:neL4a6YNqUtmVJCw5s5f4+QBHbUe++NfgFjnu8tSdusU+y6ni/0Brjac
