Provide an example of user tokens for authentication

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,7 @@ DB_NAME=evalap
 # =============================================================================
 # API Keys and Authentication
 # =============================================================================
+USER_API_KEYS='{"jean": "un-token", "michel": "autre-token"}'
 # Admin token for privileged operations
 ADMIN_TOKEN=your-admin-token-here
 
