``` feat: add DATASET_SAMPLE_LIMIT environment variable to .env.example with documentation
- Add new Dataset Sampling section to .env.example
- Set DATASET_SAMPLE_LIMIT default to 0 (unlimited) for production environments
- Document that default is 10 in dev, unlimited elsewhere
- Note that 0 disables sampling and processes full datasets
```

--- a/.env.example
+++ b/.env.example
@@ -77,3 +77,10 @@ MCP_BRIDGE_URL=http://172.18.0.1:9092
 # =============================================================================
 # Log level: DEBUG, INFO, WARNING, ERROR, CRITICAL
 LOG_LEVEL=INFO
+
+# =============================================================================
+# Dataset Sampling
+# =============================================================================
+# Maximum number of dataset rows to load when sampling (default: 10 in dev, unlimited elsewhere).
+# Set to 0 to disable sampling and process full datasets.
+DATASET_SAMPLE_LIMIT=0
