refactor: Standardize environment variable names to SCW_ prefix
- Rename SCALEWAY_* environment variables to SCW_* prefix for consistency
- Update Pulumi stack configs to use evalap:* namespace instead of scaleway:*
- Remove DB_PASSWORD from .env.example (now encrypted in stack configs)
- Add encrypted db_password to staging stack configuration
- Update all provider configuration and tests to use new variable names
- Add --env-file flag to all justfile pulumi commands for consistent env loading

--- a/infra/Pulumi.staging.yaml
+++ b/infra/Pulumi.staging.yaml
@@ -1,5 +1,7 @@
+encryptionsalt: v1:DzD1084CACo=:v1:VTijKAyw7fLgd6Qw:MUA9iOEdDZ4sau9qEsUd32CKulLOVA==
 config:
-  scaleway:region: fr-par
-  scaleway:project_id: ${env:SCALEWAY_PROJECT_ID}
-  scaleway:access_key: ${env:SCALEWAY_ACCESS_KEY}
-  scaleway:secret_key: ${env:SCALEWAY_SECRET_KEY}
+  evalap:project_id: ${env:SCW_PROJECT_ID}
+  evalap:access_key: ${env:SCW_ACCESS_KEY}
+  evalap:secret_key: ${env:SCW_SECRET_KEY}
+  evalap:db_password:
+    secure: v1:M5s18jWNlYaGPKX6:6L7CihKJ3gaAemrX6NIf7llAj5QoCBQ93xycKdnBIU4CZLDiUZ8jywWI8AaixuU=
