--- a/infra/Pulumi.production.yaml
+++ b/infra/Pulumi.production.yaml
@@ -1,5 +1,4 @@
 config:
-  scaleway:region: fr-par
-  scaleway:project_id: ${env:SCALEWAY_PROJECT_ID}
-  scaleway:access_key: ${env:SCALEWAY_ACCESS_KEY}
-  scaleway:secret_key: ${env:SCALEWAY_SECRET_KEY}
+  evalap:project_id: ${env:SCW_PROJECT_ID}
+  evalap:access_key: ${env:SCW_ACCESS_KEY}
+  evalap:secret_key: ${env:SCW_SECRET_KEY}
