feat: Add AWS SDK credentials for Pulumi state backend and encrypt staging secrets
- Add AWS_ACCESS_KEY_ID and AWS_SECRET_ACCESS_KEY to .env.example with documentation explaining they're required by Pulumi's AWS SDK for S3-compatible Scaleway Object Storage backend
- Encrypt access_key and secret_key in staging stack configuration
- Change project_id from environment variable reference to hardcoded value in staging stack

--- a/.env.example
+++ b/.env.example
@@ -99,3 +99,21 @@ SCW_REGION=fr-par
 # Pulumi passphrase for encrypting stack secrets
 # Use with: uv run --env-file ../.env pulumi up --stack organization/evalap/dev --yes
 PULUMI_CONFIG_PASSPHRASE=your-pulumi-passphrase-here
+
+
+# =============================================================================
+# Pulumi State Backend (Scaleway Object Storage)
+# =============================================================================
+# Pulumi uses an S3-compatible backend for state storage (see the `state-login`
+# recipe in the justfile). The AWS_* variables below are required by the AWS SDK
+# used by Pulumi to authenticate against the Scaleway Object Storage endpoint
+# configured as the Pulumi backend.
+#
+# In most setups, these values should match SCW_ACCESS_KEY and SCW_SECRET_KEY
+# defined in the Scaleway section above.
+
+# Scaleway Access Key (get from Scaleway console)
+AWS_ACCESS_KEY_ID=your-scaleway-access-key-here
+
+# Scaleway Secret Key (get from Scaleway console)
+AWS_SECRET_ACCESS_KEY=your-scaleway-secret-key-here
