--- a/infra/Pulumi.staging.yaml
+++ b/infra/Pulumi.staging.yaml
@@ -1,7 +1,9 @@
 encryptionsalt: v1:DzD1084CACo=:v1:VTijKAyw7fLgd6Qw:MUA9iOEdDZ4sau9qEsUd32CKulLOVA==
 config:
-  evalap:project_id: ${env:SCW_PROJECT_ID}
-  evalap:access_key: ${env:SCW_ACCESS_KEY}
-  evalap:secret_key: ${env:SCW_SECRET_KEY}
   evalap:db_password:
     secure: v1:M5s18jWNlYaGPKX6:6L7CihKJ3gaAemrX6NIf7llAj5QoCBQ93xycKdnBIU4CZLDiUZ8jywWI8AaixuU=
+  evalap:project_id: 863286b3-ec9c-4990-949e-153706b069a8
+  evalap:access_key:
+    secure: v1:xYAOByTsFm4w5M1i:h9E6aHseVA207GvXH6KnuAhiXLccn69RpViUI7BvyoKVgGWD
+  evalap:secret_key:
+    secure: v1:SFbyEvFn5qrtN3Al:s5LCNkNfDYIcND18tPw2kyq3u5z3yEuKytaTna5uOOHOpzgytjldo17qDN/wwprNgjb1bg==
