--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,7 +63,7 @@ infra = [
 
 [tool.pytest.ini_options]
 asyncio_default_fixture_loop_scope = "function"
-testpaths = ["tests/"]
+testpaths = ["tests/", "infra/tests/"]
 python_files = ["test_*.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
