refactor: migrate from deprecated Scaleway API module paths to scaleway.network and scaleway.containers
Replace deprecated `scaleway.Vpc` with `scaleway.network.Vpc` in PrivateNetwork component. Replace deprecated `scaleway.ContainerNamespace` and `scaleway.Container` with `scaleway.containers.Namespace` and `scaleway.containers.Container` in ServerlessContainer component. Update all unit test mock paths to use new module structure. Add pytest filterwarnings configuration to suppress deprecation warnings from

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,6 +67,13 @@ testpaths = ["tests/", "infra/tests/"]
 python_files = ["test_*.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
+filterwarnings = [
+    # Ignore deprecation warnings from pulumiverse_scaleway library internals
+    # These are emitted during import when the library loads deprecated module aliases
+    "ignore:scaleway\\.index.*has been deprecated:DeprecationWarning",
+    # Ignore asyncio Future deprecation warning from Pulumi SDK
+    "ignore:There is no current event loop:DeprecationWarning",
+]
 
 
 # Packaging
