--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,8 @@ dependencies = [
     "ecologits~=0.6.2",
     "toml~=0.10.2",
     "supervisor~=4.2.5",
+    "tqdm~=4.67.1",
+    "elasticsearch~=9.2.0",
     # Front
     "streamlit~=1.40.1",
     "plotly~=5.22.0",
