--- a/apps/ui/pyproject.toml
+++ b/apps/ui/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "evalap-core",
     "streamlit~=1.40.1",
     "plotly~=5.22.0",
+    "jinja2~=3.1.4",
     "requests~=2.32.3", # Likely needed
     "pandas~=2.2.3",
 ]
