feat: add Scaleway Container Registry component and integrate Docker image build/push logic

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,8 @@ infra = [
     "pulumi>=3.206.0,<4.0.0",
     "pulumiverse-scaleway>=1.11.1,<2.0.0",
     "pydantic>=2.0.0",
+    "pulumi-docker>=4.0.0",
+    "pulumi-command>=1.0.0",
 ]
 
 [tool.pytest.ini_options]
