--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy
+name: Build
 
 on:
   push:
@@ -58,26 +58,3 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
           platforms: linux/amd64,linux/arm64
-
-  deploy:
-    name: Deploy from ${{ github.ref_name }}/${{ github.sha }}
-    runs-on: ubuntu-latest
-    needs: build-and-push
-    steps:
-      - name: Trigger dev deployment
-        run: |
-          RESPONSE="$(curl --request POST \
-            --form token=${{ secrets.GITLAB_CI_TOKEN }} \
-            --form ref=main \
-            --form 'variables[pipeline_name]=${{ github.event.repository.name }} - ${{ needs.build-and-push.outputs.commit_title }}' \
-            --form 'variables[docker_image_tag]=${{ env.IMAGE_TAG }}' \
-            --form 'variables[application_to_deploy]=evalap' \
-            --form 'variables[deployment_environment]=dev' \
-            'https://gitlab.com/api/v4/projects/58117805/trigger/pipeline')"
-
-          if echo "$RESPONSE" | grep -q '"status":"created"'; then
-            echo $RESPONSE
-          else
-            echo $RESPONSE
-            exit 1
-          fi
