--- a/pyproject.toml
+++ b/pyproject.toml
@@ -117,4 +117,7 @@ dev = [
     "pytest-cov>=7.0.0",
     "ipykernel>=6.30.1",
     "watchdog>=6.0.0",
+    "tqdm>=4.67.1",
+    "pandas>=2.2.3",
+    "requests>=2.32.5",
 ]
