--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ dependencies = [
     "streamlit~=1.40.1",
     "plotly~=5.22.0",
     "openpyxl~=3.1.5",
+    "tabulate>=0.9.0",
 ]
 
 [project.urls]
