--- a/pyproject.toml
+++ b/pyproject.toml
@@ -88,7 +88,7 @@ distribution = false
 
 [tool.ruff]
 line-length = 111
-exclude = ["evalap/api/alembic/versions/", "notebooks/", ".claude/", ".cursor/", ".specify/", ".windsurf/"]
+exclude = ["evalap/api/alembic/versions/", "notebooks/", ".claude/", ".cursor/", ".specify/", ".windsurf/", "archives/"]
 
 [tool.ruff.lint]
 select = [
