--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ dependencies = [
     "plotly~=5.22.0",
     "openpyxl~=3.1.5",
     "huggingface-hub>=1.2.3",
+    "tabulate~=0.9.0",
 ]
 
 [project.urls]
